--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "name": "wt",
   "description": "The node.js wt (web tools) library.",
   "version": "0.0.1",
+  "main": "./wt.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/kilobit/wt-node.git"
   },
   "engines": {
-    "node": "~v0.5.4"
+    "node": ">=v0.5.4"
   },
-  "dependencies": {},
+  "dependencies": { "jsdom": "*" },
   "devDependencies": {}
 }
