--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "url": "git://github.com/kilobit/wt-node.git"
   },
   "engines": {
-    "node": ">=v0.5.4"
+    "node": ">=v0.6.0"
   },
-  "dependencies": { "jsdom": "4.0.2" },
-  "devDependencies": {}
+  "dependencies": {
+    "jsdom": "4.0.2"
+  },
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "mocha": "^2.2.5"
+  }
 }
